<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textColor="#FF0000"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:textColorHint="#888888"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:textColorHint="#888888"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColorHint="#888888"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:layout_marginTop="25dp"
        android:backgroundTint="#FF0000"/>

    <TextView
        android:id="@+id/tvLoginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

</LinearLayout>
